--- a/shop-web-app/appsettings.json
+++ b/shop-web-app/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "nono"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
