model from file, controls, scenery

--- a/shop-web-app/shop-web-app.csproj
+++ b/shop-web-app/shop-web-app.csproj
@@ -22,6 +22,17 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
+    <Folder Include="wwwroot\resources\images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="wwwroot\resources\models\man.glb">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\resources\models\paryz.jpg">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
